tests/compile-fail/integration__integration__general__func_untyped.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: var-typed function
   ┌─ <input>:25:9
   │
25 │         var foo() { return 1; }
   │         ^^^ cannot be used on functions


